[toolbars-new] fix custom spacing keys (#3482)

--- a/packages/ui-components/web/statics/styles/settings-add-item.scss
+++ b/packages/ui-components/web/statics/styles/settings-add-item.scss
@@ -11,10 +11,6 @@
   &.itemContainerSelected {
     box-shadow: 0 0 0 3px $settings-action-color-fallback;
   }
-
-  &.mobile {
-    margin: 2.5px;
-  }
 }
 
 .filesItem {
